--- a/css/style.css
+++ b/css/style.css
@@ -60,10 +60,37 @@ body{
 /* Estilos de barra de navegacion */
 .nav{
     grid-area: nav;
-    border: 5px solid red;
-    background: lightgray;
+    background: linear-gradient(90deg, #03228f 10%, #0e73e4 100%);
 }
 
+.nav > ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+.nav > ul > li{
+    padding: 10px;
+    
+}
+
+.nav a {
+    display: block;
+    margin-left: 30px;
+    margin-right: 30px;
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: lighter;
+    transition: all 300ms;
+}
+
+.nav a:hover {
+    transform: scale(1.1,1.1);
+}
+
+/* estilos para el conteido principal */
 .content{
     grid-area: content;
     border: 5px solid green;
