--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,19 @@ body{
 /* estilos para el conteido principal */
 .content{
     grid-area: content;
-    border: 5px solid green;
-    background: lightgreen;
+    background: #f6f7f9;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.peli-item{
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 6px #ddd;
+    margin: 20px 30px 20px 30px;
+    padding: 60px 25px 60px 25px;
 }
 
 .sidebar{
