--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,34 @@ body{
     padding: 60px 25px 60px 25px;
 }
 
+button,
+input[type="submit"],
+input[type="button"]
+{
+    background: #0b70e1;
+    width: 100px;
+    color: white;
+    border: 0;
+    outline: 0;
+    padding: 10px;
+    border-radius: 5px;
+    font-family: sans-serif, Arial, Helvetica;
+    margin-top: 10px;
+    text-transform: capitalize;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 300ms;
+}
+
+.peli-item .edit:hover{
+    background: #e77b00;
+}
+
+.peli-item .delete:hover{
+    background: #9b0202;
+}
+
 .sidebar{
     grid-area: sidebar;
     border: 5px solid brown;
